--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"react": "18.2.0",
 		"react-color": "^2.19.3",
 		"react-dom": "18.2.0",
-		"tailwindcss": "3.3.3"
+		"react-window": "^1.8.9",
+		"tailwindcss": "3.3.3",
+		"webfontloader": "^1.6.28"
 	},
 	"devDependencies": {
 		"cypress": "^13.2.0"
